fix: texts out of screen

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-  height: 100%;
+  min-height: 100vh
 }
 
 body {
@@ -17,6 +17,8 @@ body {
   align-items: center;
   background-color: #8AB170;
   color: #342716;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 h1 {
@@ -33,8 +35,14 @@ h1 {
   margin-bottom: 20px;
 }
 
+.question-gif {
+  max-width: 315px;
+  width: 100%;
+  height: auto;
+  border-radius: 50px;
+}
+
 #app {
-  padding: 40px;
   border-radius: 10px;
   max-width: 800px;
   width: 100%;
@@ -63,12 +71,6 @@ h1 {
 
 .hidden {
   display: none;
-}
-
-.question-gif {
-  width: 350px;
-  height: 282px;
-  border-radius: 50px;
 }
 
 button {
